compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_2.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport gleam/list\nimport gleam/int\n\npub fn main() {\n  list.map([1, 2, 3], int.add(1, _))\n}"
---
----- BEFORE ACTION

import gleam/list
import gleam/int

pub fn main() {
  list.map([1, 2, 3], int.add(1, _))
                      ▔▔▔▔↑         
}


----- AFTER ACTION

import gleam/list
import gleam/int

pub fn main() {
  let value = int.add(1, _)
  list.map([1, 2, 3], value)
}
