compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_from_arg_in_pipelined_call.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "import gleam/int\n\npub fn main() {\n  let add = int.add\n  let x = [4, 5, 6] |> list.map2([1, 2, 3], add)\n  x\n}"
---
----- BEFORE ACTION
import gleam/int

pub fn main() {
  let add = int.add
  let x = [4, 5, 6] |> list.map2([1, 2, 3], add)
                                 ↑              
  x
}


----- AFTER ACTION
import gleam/int

pub fn main() {
  let add = int.add
  let ints = [1, 2, 3]
  let x = [4, 5, 6] |> list.map2(ints, add)
  x
}
