compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__fallback_to_split_string_when_selecting_invalid_name.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  \"wibble wobble woo woo\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  "wibble wobble woo woo"
          ▔▔▔▔▔▔▔▔▔▔↑    
}


----- AFTER ACTION
pub fn main() {
  "wibble wobble woo" <> todo <> " woo"
}
