compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__fill_in_labelled_args_works_with_use.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  use <- wibble()\n}\n\npub fn wibble(arg1 arg1, arg2 arg2) { Nil }\n "
---
----- BEFORE ACTION

pub fn main() {
  use <- wibble()
         ▔▔▔▔▔▔▔↑
}

pub fn wibble(arg1 arg1, arg2 arg2) { Nil }
 


----- AFTER ACTION

pub fn main() {
  use <- wibble(arg1: todo)
}

pub fn wibble(arg1 arg1, arg2 arg2) { Nil }
